--- a/index.html
+++ b/index.html
@@ -5,6 +5,32 @@
     <title>Eric Noga</title>
 </head>
 <body>
-
+<div class="header">
+    <h1>Eric Noga</h1>
+    <h2>Full Stack Developer</h2>
+    <img src="https://picsum.photos/200/300" alt="My Photo"/>
+</div>
+<hr>
+<div class="about">
+    <h2 id="aboutme">About Me</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent blandit laoreet ex, ut efficitur erat faucibus dapibus. Etiam est ex, tincidunt nec interdum ac, porta nec orci. Aliquam venenatis feugiat eleifend. Proin sed suscipit nulla. Vestibulum ac risus nec elit finibus bibendum eu et justo. Donec quis condimentum mauris, at interdum metus. Proin at mollis lorem. Donec non vehicula nunc. Sed interdum faucibus nunc, eget porttitor metus. Fusce tortor magna, ullamcorper vitae ipsum nec, convallis ullamcorper ligula. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Morbi pellentesque, felis vitae luctus posuere, mauris nulla cursus urna, sit amet sollicitudin lacus velit consectetur dui. Etiam fringilla lorem mi, vitae bibendum leo iaculis at. In et venenatis lectus. Suspendisse lobortis accumsan elit ut consequat. Suspendisse consectetur turpis tristique, elementum ante vitae, pulvinar felis</p>
+    <p>Morbi elementum quam quis ex fermentum tempor. Maecenas quis pellentesque velit. Maecenas facilisis, felis blandit auctor mollis, nibh arcu ultrices sapien, quis egestas ligula metus at tortor. Nulla hendrerit, felis quis egestas tempus, lectus purus blandit felis, eget porta metus neque et mauris. Etiam aliquet erat vitae felis rhoncus tempor. Vivamus mattis ante id placerat porta. Nullam porta suscipit bibendum. Nullam in efficitur nisl, vel mollis leo. Fusce placerat lectus in enim gravida, non mollis risus pretium. Phasellus a ultrices mauris. Cras semper, nibh a convallis consequat, orci dui malesuada dolor, nec condimentum odio diam vel sapien. Maecenas a tellus felis. In pharetra, ante id elementum pharetra, nisl ligula malesuada arcu, ut consequat nisl nisl in tortor. Etiam sit amet sagittis ante.</p>
+    <p>Suspendisse quis quam dapibus, consequat nibh ac, sagittis ex. Curabitur eget bibendum purus. Curabitur dictum condimentum vehicula. Donec consequat magna et diam euismod, quis efficitur quam auctor. Quisque in efficitur orci, nec mattis libero. Pellentesque suscipit massa at ante scelerisque sodales. Sed sed porta mi, elementum blandit eros. Donec ut lacus egestas, viverra dolor sit amet, laoreet leo. Maecenas nulla augue, posuere tristique consequat non, scelerisque maximus nunc. Sed non dapibus elit. Nullam euismod vel dui sit amet blandit. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aenean maximus scelerisque consectetur.</p>
+    <p>Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Curabitur commodo nec nisi nec mattis. Proin id rhoncus felis, et dapibus orci. Praesent tincidunt sollicitudin tincidunt. Phasellus tempor lorem rhoncus velit molestie, at vestibulum tellus tincidunt. Nam euismod sem venenatis odio ullamcorper, at posuere nulla posuere. Donec viverra leo et elit placerat, sed posuere dui consectetur.</p>
+    <p>tiam eu neque ut eros feugiat pharetra. Integer in turpis id nibh euismod scelerisque sed vel magna. Aenean pulvinar luctus laoreet. Integer elementum enim nec elementum varius. Praesent mollis ut lorem non euismod. Duis sollicitudin commodo euismod. Aliquam pulvinar sem eu libero scelerisque tristique vitae sit amet justo. Morbi tellus mauris, tristique sed venenatis sit amet, ornare vel eros. Integer eu posuere tellus. Etiam in odio a odio ultrices dictum. Pellentesque malesuada convallis enim.</p>
+</div>
+<hr>
+<div class="projects">
+    <h2 id="project">Projects</h2>
+    <p>Motivational Poster</p>
+    <p>Redesign of website</p>
+</div>
+<hr>
+<div class="contact">
+    <h2 id="contactme">Contact Me</h2>
+    <p>Tel: +1-555-555-5555</p>
+    <p>Email: email@email.com</p>
+</div>
+<hr>
 </body>
 </html>
