--- a/index.html
+++ b/index.html
@@ -34,5 +34,6 @@
     <p>Email: email@email.com</p>
 </div>
 
+<footer>Copyright © 2025 | Designed and Built by Eric Noga</footer>
 </body>
 </html>
