Updating the project1 file and the desktop wireframe image

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <div class="projects">
     <h2 id="project">Projects</h2>
-    <a href="#">Motivational Poster</a><br>
+    <a href="project1.html">Wireframes for a fake company website</a><br>
     <a href="#">Redesign of website</a>
 </div>
 
