--- a/project1.html
+++ b/project1.html
@@ -7,8 +7,10 @@
     <title>Eric Noga - Project</title>
 </head>
 <body>
-  <div id = "container">
-    <img src=images/EricLaptop_Desktop_Frames.png" alt="Desktop Wireframes" />
+  <div class = "container">
+      <img class="image" src="images/EricLaptop_Desktop_Frames.png" alt="Desktop Wireframes" />
+      <img class="image" src="images/EricLaptop_iPad_Frames.png" alt="iPad Wireframes" />
+      <img class="image" src="images/EricLaptop_iPhone16_Frames.png" alt="iPhone Wireframes" />
   </div>
 </body>
 </html>
