Added some details on the project 1 page

--- a/project1.html
+++ b/project1.html
@@ -8,9 +8,11 @@
 </head>
 <body>
   <div class = "container">
+      <p class="para">This was a random project generated for me where I was given the customer information on what they were searching for. I went and created three different wireframes for a fake company. I created the mobile wireframe first for the iPhone 16 display. I then adjusted the layout for the iPad display and finally created the desktop wireframe.</p>
       <img class="image" src="images/EricLaptop_Desktop_Frames.png" alt="Desktop Wireframes" />
       <img class="image" src="images/EricLaptop_iPad_Frames.png" alt="iPad Wireframes" />
       <img class="image" src="images/EricLaptop_iPhone16_Frames.png" alt="iPhone Wireframes" />
+      <a href="index.html">Main Page</a>
   </div>
 </body>
 </html>
